Implement testing pipeline, add first tests